crates/tests/databases-tests/src/postgres/snapshots/databases_tests__postgres__explain_tests__mutation__delete_invoice_line.snap
---
source: crates/tests/databases-tests/src/postgres/explain_tests.rs
expression: "result.details.get(\"0 v2_delete_InvoiceLine_by_InvoiceLineId SQL Mutation\").unwrap()"
---
EXPLAIN WITH "%0_generated_mutation" AS (
  DELETE FROM
    "public"."InvoiceLine" AS "%1_InvoiceLine"
  WHERE
    (
      ("%1_InvoiceLine"."InvoiceLineId" = 90)
      AND EXISTS (
        SELECT
          1 AS "one"
        FROM
          "public"."Track" AS "%2_Track"
        WHERE
          (
            ("%2_Track"."TrackId" = 512)
            AND (
              "%1_InvoiceLine"."TrackId" = "%2_Track"."TrackId"
            )
          )
      )
    ) RETURNING *,
    true AS "%check__constraint"
)
SELECT
  (
    SELECT
      json_build_object('result', row_to_json("%6_universe"), 'type', $1) AS "universe"
    FROM
      (
        SELECT
          *
        FROM
          (
            SELECT
              coalesce(json_agg(row_to_json("%7_returning")), '[]') AS "returning"
            FROM
              (
                SELECT
                  "%3_InvoiceLine"."InvoiceLineId" AS "invoice_line_id",
                  "%3_InvoiceLine"."Quantity" AS "quantity"
                FROM
                  "%0_generated_mutation" AS "%3_InvoiceLine"
              ) AS "%7_returning"
          ) AS "%7_returning"
          CROSS JOIN (
            SELECT
              COUNT(*) AS "affected_rows"
            FROM
              (
                SELECT
                  "%4_InvoiceLine".*
                FROM
                  "%0_generated_mutation" AS "%4_InvoiceLine"
              ) AS "%5_InvoiceLine"
          ) AS "%8_aggregates"
      ) AS "%6_universe"
  ) AS "%results",
  (
    SELECT
      coalesce(
        bool_and(
          "%9_v2_delete_InvoiceLine_by_InvoiceLineId"."%check__constraint"
        ),
        true
      ) AS "%check__constraint"
    FROM
      "%0_generated_mutation" AS "%9_v2_delete_InvoiceLine_by_InvoiceLineId"
  ) AS "%check__constraint"
